--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm i
-    - run: pm2 restart Backend
-    - run: sudo service nginx restart 
+    - run: |
+        npm i
+        pm2 stop 0
+        pm2 start 0
+        pm2 save
+        sudo service nginx restart
