--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,5 @@ jobs:
         cache: 'npm'
     - run: |
         npm i
-        pm2 stop 1
-        pm2 start 1
-        pm2 save
-        sudo service nginx restart
+        pm2 restart Backend
+        sudo service nginx restart 
