--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,6 @@ jobs:
         cache: 'npm'
     - run: |
         npm i
-        pm2 restart Backend
+        pm2 stop app.js
+        pm2 start app.js
+        pm2 save
