--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,4 @@ jobs:
         cache: 'npm'
     - run: |
         npm i
-        pm2 stop app.js
-        pm2 start app.js
-        pm2 save
+        pm2 restart Backend
