--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: pm2 restart app
+    # - run: pm2 restart app
+    - run: pm2 stop 14336
+    - run: pm2 start 14336
+    - run: pm2 save
+    - run: sudo service nginx restart
