--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: sudo pm2 restart app
-    # - run: pm2 stop 0
-    # - run: pm2 start 0
-    # - run: pm2 save
+    # - run: sudo pm2 restart app
+    - run: pm2 stop 0
+    - run: pm2 start 0
+    - run: pm2 save
     - run: sudo service nginx restart
